This file includes only a short list of the changes between MPC-HC's versions.
For the older changes see:
http://mpc-hc.svn.sourceforge.net/viewvc/mpc-hc/trunk/docs/Changelog_old.txt

Legend:
+ New
* Changed
! Fixed


1.6.3 - not released yet
=========================
* Updated unrar.dll to v4.20b3
* Updated MediaInfoLib to v0.7.58
* Updated ZenLib to v0.4.27
! The hand cursor wasn't shown in the web links in Keys and WebServer options page
! Ticket #2330, Fix the radio buttons in the Logo options page