@@ -13,5 +13,6 @@ Legend:
 * Updated unrar.dll to v4.20b3
 * Updated MediaInfoLib to v0.7.58
 * Updated ZenLib to v0.4.27
+* Updated FFmpeg (git a1fc1d2)
 ! The hand cursor wasn't shown in the web links in Keys and WebServer options page
 ! Ticket #2330, Fix the radio buttons in the Logo options page
